<resources>
    <string name="mode_of_transport">Mode of Transport</string>
    <string name="mode_car">Car -</string>
    <string name="mode_Train">Train -</string>
    <string name="navigate">Navigate</string>
    <string name="please_wait">Please wait...</string>
    <string name="select_place">Select place</string>
    <string name="no_network">Please check your network connection</string>
    <string name="retry">Retry</string>
    <string name="exit">Exit</string>

</resources>
