<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/spinner_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:layout_marginLeft="10dp"
        android:text="@string/select_place"/>

    <RelativeLayout
        android:id="@+id/rlt_spinner_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/spinner_background"
        android:layout_below="@id/spinner_header"
        android:padding="10dp"
        android:layout_marginTop="5dp">

    <Spinner
        android:id="@+id/spn_names"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:visibility="visible" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rlt_modeView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_below="@id/rlt_spinner_parent"
       >

        <TextView
            android:id="@+id/txt_mode_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/mode_of_transport" />

        <TextView
            android:id="@+id/txt_mode_car"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_mode_header"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:text="@string/mode_car" />

        <TextView
            android:id="@+id/txt_mode_train"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_mode_car"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/mode_Train" />
    </RelativeLayout>

    <Button
        android:id="@+id/btnNavigate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlt_modeView"
        android:layout_marginTop="30dp"
        android:text="@string/navigate"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:background="@drawable/selector_common"
        android:textAllCaps="false" />
    </RelativeLayout>
    </ScrollView>
</RelativeLayout>
