<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlt_layout_root"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@drawable/dialog_background"
    tools:ignore="SpUsage,ContentDescription">


    <TextView
        android:id="@+id/txt_common_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="25dp"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:text="@string/no_network"
        android:textColor="@android:color/black"
        android:textSize="18dp" />


    <RelativeLayout
        android:id="@+id/rlt_layout_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_common_msg"
        android:paddingBottom="10dp"
        android:paddingTop="30dp">

        <View
            android:id="@+id/view_center_horizontal"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/btn_retry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/view_center_horizontal"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/selector_common"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/retry"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/view_center_horizontal"
            android:background="@drawable/selector_cancel_button"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/exit"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />
    </RelativeLayout>

</RelativeLayout>